Creato con Colab

--- a/data_processing5.ipynb
+++ b/data_processing5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOzGhRKH/stvsgv45sVXhv",
+      "authorship_tag": "ABX9TyPmlmafabEcyCqmiwQSBJfv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "uGiuwQk02MUs",
         "colab": {
@@ -47,135 +47,237 @@
         }
       ],
       "source": [
-        "# --- CELLA 1: INSTALLAZIONE E SETUP ---\n",
+        " # --- CELLA 1: INSTALLAZIONE E SETUP ---\n",
+        "\n",
         "!pip install -q flwr pandas numpy scipy scikit-learn\n",
         "\n",
+        "\n",
         "import os\n",
+        "\n",
         "import zipfile\n",
+        "\n",
         "import ast\n",
+        "\n",
         "import numpy as np\n",
+        "\n",
         "import pandas as pd\n",
+        "\n",
         "from scipy.fft import fft\n",
+        "\n",
         "from scipy.stats import skew, kurtosis, linregress, entropy\n",
+        "\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+        "\n",
         "import warnings\n",
+        "\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
+        "\n",
         "# Decompressione Dataset\n",
+        "\n",
         "if not os.path.exists(\"CSV_train\") and os.path.exists(\"CSV_train.zip\"):\n",
+        "\n",
         "    print(\"Decompressione CSV_train.zip...\")\n",
+        "\n",
         "    with zipfile.ZipFile(\"CSV_train.zip\", 'r') as zip_ref:\n",
+        "\n",
         "        zip_ref.extractall(\"CSV_train\")\n",
+        "\n",
         "    print(\"Fatto!\")\n",
+        "\n",
         "elif not os.path.exists(\"CSV_train.zip\"):\n",
-        "    print(\"⚠️ ATTENZIONE: Carica il file 'CSV_train.zip' e 'x_test.csv' su Colab!\")"
+        "\n",
+        "    print(\"⚠️ ATTENZIONE: Carica il file 'CSV_train.zip' e 'x_test.csv' su Colab!\")\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# --- CELLA 2: PREPROCESSING MEDICAL GRADE ---\n",
+        " # --- CELLA 2: PREPROCESSING MEDICAL GRADE ---\n",
+        "\n",
         "\n",
         "TS_COLS = ['hr_time_series', 'resp_time_series', 'stress_time_series', 'activity_time_series']\n",
         "\n",
+        "\n",
         "def clean_series_interpolation(series_str):\n",
+        "\n",
         "    if not isinstance(series_str, str):\n",
+        "\n",
         "        return np.array([])\n",
+        "\n",
         "    try:\n",
+        "\n",
         "        data = np.array(ast.literal_eval(series_str), dtype=float)\n",
+        "\n",
         "        data[data <= 0] = np.nan\n",
+        "\n",
         "        if np.all(np.isnan(data)):\n",
+        "\n",
         "            return np.array([0.0])\n",
+        "\n",
         "        s_data = pd.Series(data)\n",
+        "\n",
         "        s_data = s_data.interpolate(method='linear', limit_direction='both')\n",
+        "\n",
         "        s_data = s_data.fillna(0)\n",
+        "\n",
         "        return s_data.values\n",
+        "\n",
         "    except:\n",
+        "\n",
         "        return np.array([0.0])\n",
         "\n",
+        "\n",
         "def calculate_params(matrix):\n",
+        "\n",
         "    \"\"\"\n",
+        "\n",
         "    Estrae feature avanzate + metriche fisiologiche (HRV proxy).\n",
+        "\n",
         "    Restituisce 14 feature totali.\n",
+        "\n",
         "    \"\"\"\n",
+        "\n",
         "    if len(matrix) <= 1:\n",
+        "\n",
         "        # CORREZIONE: Ora sono 14 feature, non 13\n",
+        "\n",
         "        return [0.0] * 14\n",
         "\n",
+        "\n",
         "    # 1. Statistiche Base\n",
+        "\n",
         "    mean = np.mean(matrix)\n",
+        "\n",
         "    std = np.std(matrix)\n",
+        "\n",
         "    min_val = np.min(matrix)\n",
+        "\n",
         "    max_val = np.max(matrix)\n",
         "\n",
+        "\n",
         "    # 2. Percentili\n",
+        "\n",
         "    p25 = np.percentile(matrix, 25)\n",
+        "\n",
         "    p50 = np.percentile(matrix, 50)\n",
+        "\n",
         "    p75 = np.percentile(matrix, 75)\n",
         "\n",
+        "\n",
         "    # 3. Forma e Trend\n",
+        "\n",
         "    sk = skew(matrix) if std > 0 else 0\n",
+        "\n",
         "    ku = kurtosis(matrix) if std > 0 else 0\n",
         "\n",
+        "\n",
         "    try:\n",
+        "\n",
         "        slope, _, _, _, _ = linregress(np.arange(len(matrix)), matrix)\n",
+        "\n",
         "        if np.isnan(slope): slope = 0.0\n",
+        "\n",
         "    except:\n",
+        "\n",
         "        slope = 0.0\n",
         "\n",
+        "\n",
         "    # 4. Energia Spettrale\n",
+        "\n",
         "    f_trans = fft(matrix)\n",
+        "\n",
         "    energy = np.sum(np.abs(f_trans)**2) / len(matrix)\n",
+        "\n",
         "\n",
         "    # --- NUOVE FEATURE AGGIUNTE ---\n",
         "\n",
+        "\n",
         "    # 5. RMSSD Proxy (Root Mean Square of Successive Differences)\n",
+        "\n",
         "    diff = np.diff(matrix)\n",
+        "\n",
         "    rmssd = np.sqrt(np.mean(diff**2)) if len(diff) > 0 else 0\n",
         "\n",
+        "\n",
         "    # 6. Zero Crossings (Rispetto alla media)\n",
+        "\n",
         "    zero_crossings = np.where(np.diff(np.sign(matrix - mean)))[0].size\n",
         "\n",
+        "\n",
         "    # 7. Entropia di Shannon\n",
+        "\n",
         "    counts, _ = np.histogram(matrix, bins=10, density=True)\n",
+        "\n",
         "    ent = entropy(counts + 1e-10)\n",
         "\n",
+        "\n",
         "    # Totale 14 feature\n",
+        "\n",
         "    return [mean, std, min_val, max_val, p25, p50, p75, sk, ku, slope, energy, rmssd, zero_crossings, ent]\n",
         "\n",
+        "\n",
         "def process_dataframe(df):\n",
+        "\n",
         "    extracted_data = []\n",
+        "\n",
         "    # Escludiamo le colonne non scalari e label/id/date\n",
+        "\n",
         "    scalar_cols = [c for c in df.columns if 'time_series' not in c and c != 'label' and c != 'id' and 'date' not in c]\n",
         "\n",
+        "\n",
         "    for _, row in df.iterrows():\n",
+        "\n",
         "        row_features = []\n",
+        "\n",
         "        # Feature Scalari esistenti\n",
+        "\n",
         "        for col in scalar_cols:\n",
+        "\n",
         "            val = row[col] if pd.notnull(row[col]) else 0.0\n",
+        "\n",
         "            row_features.append(val)\n",
         "\n",
+        "\n",
         "        # Feature Time Series\n",
+        "\n",
         "        for col in TS_COLS:\n",
+        "\n",
         "            if col in df.columns:\n",
+        "\n",
         "                clean_seq = clean_series_interpolation(row[col])\n",
+        "\n",
         "                feats = calculate_params(clean_seq)\n",
+        "\n",
         "                row_features.extend(feats)\n",
+        "\n",
         "\n",
         "        extracted_data.append(row_features)\n",
         "\n",
+        "\n",
         "    col_names = list(scalar_cols)\n",
+        "\n",
         "    suffixes = ['mean', 'std', 'min', 'max', 'p25', 'p50', 'p75', 'skew', 'kurt', 'slope', 'energy', 'rmssd', 'zcross', 'entropy']\n",
+        "\n",
         "    for ts_col in TS_COLS:\n",
+        "\n",
         "        if ts_col in df.columns:\n",
+        "\n",
         "            base_name = ts_col.replace('_time_series', '')\n",
+        "\n",
         "            for s in suffixes:\n",
+        "\n",
         "                col_names.append(f\"{base_name}_{s}\")\n",
         "\n",
+        "\n",
         "    return pd.DataFrame(extracted_data, columns=col_names)\n",
+        "\n",
         "\n",
         "print(\"Preprocessing Medical Grade pronto.\")"
       ],
@@ -186,7 +288,7 @@
         "id": "0IktUx0d2n3l",
         "outputId": "730cae86-a8bb-48d5-d011-f0b9305cf8d4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,119 +302,223 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- CELLA 3: TRAINING FEDERATO \"SMART\" (Quality Gating) ---\n",
+        " # --- CELLA 3: TRAINING FEDERATO \"SMART\" (Quality Gating) ---\n",
+        "\n",
         "\n",
         "def run_federated_simulation_smart():\n",
+        "\n",
         "    TRAIN_ROOT = \"CSV_train\"\n",
+        "\n",
         "    global_estimators = []\n",
         "\n",
+        "\n",
+        "\n",
         "    all_val_features = []\n",
+        "\n",
         "    all_val_labels = []\n",
         "\n",
+        "\n",
+        "\n",
         "    client_folders = []\n",
+        "\n",
         "    for root, dirs, files in os.walk(TRAIN_ROOT):\n",
+        "\n",
         "        csv_files = [f for f in files if f.endswith('.csv')]\n",
+        "\n",
         "        if csv_files:\n",
+        "\n",
         "            client_folders.append(root)\n",
+        "\n",
+        "\n",
         "\n",
         "    print(f\"Training Federato Smart su {len(client_folders)} client...\")\n",
         "\n",
+        "\n",
+        "\n",
         "    # Variabili per inizializzazione modello globale\n",
+        "\n",
         "    first_X_train = None\n",
+        "\n",
         "    first_y_train = None\n",
         "\n",
+        "\n",
+        "\n",
         "    accepted_clients = 0\n",
+        "\n",
         "    rejected_clients = 0\n",
         "\n",
+        "\n",
         "    for i, folder in enumerate(client_folders):\n",
+        "\n",
         "        files = [os.path.join(folder, f) for f in os.listdir(folder) if f.endswith('.csv')]\n",
+        "\n",
         "        df_list = [pd.read_csv(f, sep=';') for f in files]\n",
+        "\n",
         "        if not df_list: continue\n",
         "\n",
+        "\n",
+        "\n",
         "        df_client = pd.concat(df_list, ignore_index=True)\n",
+        "\n",
         "        if 'label' not in df_client.columns: continue\n",
         "\n",
+        "\n",
+        "\n",
         "        y = df_client['label'].values\n",
+        "\n",
         "        X = process_dataframe(df_client)\n",
         "\n",
+        "\n",
+        "\n",
         "        # Saltiamo client con troppi pochi dati\n",
+        "\n",
         "        if len(X) < 10: continue\n",
+        "\n",
         "\n",
         "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
+        "\n",
+        "\n",
         "        # Salviamo il primo per inizializzare il global container\n",
+        "\n",
         "        if first_X_train is None:\n",
+        "\n",
         "            first_X_train = X_train\n",
+        "\n",
         "            first_y_train = y_train\n",
         "\n",
+        "\n",
         "        # Salviamo i dati di validazione per il test finale globale\n",
+        "\n",
         "        all_val_features.append(X_val)\n",
+        "\n",
         "        all_val_labels.append(y_val)\n",
         "\n",
+        "\n",
         "        # 3. Training Locale (Più aggressivo ora)\n",
+        "\n",
         "        clf = RandomForestRegressor(\n",
+        "\n",
         "            n_estimators=60,       # Aumentato: più alberi per client\n",
+        "\n",
         "            max_depth=20,          # Aumentato: cattura relazioni più complesse\n",
+        "\n",
         "            min_samples_leaf=2,\n",
+        "\n",
         "            max_features='sqrt',   # Evita overfitting\n",
+        "\n",
         "            n_jobs=-1,\n",
+        "\n",
         "            random_state=42\n",
+        "\n",
         "        )\n",
+        "\n",
+        "\n",
         "\n",
         "        clf.fit(X_train, y_train)\n",
         "\n",
+        "\n",
+        "\n",
         "        # --- QUALITY GATE ---\n",
+        "\n",
         "        # Il client valuta se stesso prima di inviare\n",
+        "\n",
         "        local_pred = clf.predict(X_val)\n",
+        "\n",
         "        local_mae = mean_absolute_error(y_val, local_pred)\n",
         "\n",
+        "\n",
+        "\n",
         "        # Se il MAE locale è > 18 (modello confuso), scartiamo il contributo\n",
+        "\n",
         "        if local_mae < 18.0:\n",
+        "\n",
         "            global_estimators.extend(clf.estimators_)\n",
+        "\n",
         "            accepted_clients += 1\n",
+        "\n",
         "        else:\n",
+        "\n",
         "            rejected_clients += 1\n",
+        "\n",
         "            # (Opzionale) Print per debug\n",
+        "\n",
         "            # print(f\"Client {i} scartato (MAE Locale: {local_mae:.2f})\")\n",
         "\n",
+        "\n",
         "        if (i+1) % 10 == 0:\n",
+        "\n",
         "            print(f\"   ...processati {i+1} client (Accettati: {accepted_clients}, Scartati: {rejected_clients})\")\n",
         "\n",
+        "\n",
         "    print(f\"\\nTraining concluso. Contributi integrati: {accepted_clients}/{len(client_folders)}\")\n",
+        "\n",
         "    print(\"Assemblaggio Modello Globale...\")\n",
         "\n",
+        "\n",
+        "\n",
         "    # 1. Container vuoto\n",
+        "\n",
         "    dummy_model = RandomForestRegressor(n_estimators=len(global_estimators), random_state=42, n_jobs=-1)\n",
+        "\n",
         "    # 2. Inizializzazione struttura\n",
+        "\n",
         "    dummy_model.fit(first_X_train, first_y_train)\n",
+        "\n",
         "    # 3. Iniezione intelligenza federata\n",
+        "\n",
         "    dummy_model.estimators_ = global_estimators\n",
+        "\n",
+        "\n",
         "\n",
         "    print(\"\\n--- VALUTAZIONE GLOBALE ---\")\n",
         "\n",
+        "\n",
+        "\n",
         "    X_global_val = pd.concat(all_val_features, ignore_index=True)\n",
+        "\n",
         "    y_global_true = np.concatenate(all_val_labels)\n",
+        "\n",
+        "\n",
         "\n",
         "    raw_preds = dummy_model.predict(X_global_val)\n",
         "\n",
+        "\n",
+        "\n",
         "    preds_clipped = np.clip(raw_preds, 0, 100)\n",
+        "\n",
         "    preds_integer = np.rint(preds_clipped).astype(int)\n",
+        "\n",
+        "\n",
         "\n",
         "    mae = mean_absolute_error(y_global_true, preds_integer)\n",
         "\n",
+        "\n",
+        "\n",
         "    print(f\"Campioni testati: {len(y_global_true)}\")\n",
+        "\n",
         "    print(f\"Errore Medio Assoluto (MAE) REALE: {mae:.4f}\")\n",
         "\n",
+        "\n",
+        "\n",
         "    if mae < 11.5:\n",
+        "\n",
         "        print(\"\\n🚀 OTTIMO! Stiamo scendendo verso il target.\")\n",
+        "\n",
         "    elif mae < 12.5:\n",
+        "\n",
         "        print(\"\\n✅ Miglioramento stabile.\")\n",
+        "\n",
         "    else:\n",
+        "\n",
         "        print(\"\\n⚠️ Stabile.\")\n",
+        "\n",
         "\n",
         "    return dummy_model\n",
         "\n",
+        "\n",
         "# ESECUZIONE\n",
+        "\n",
         "global_model = run_federated_simulation_smart()"
       ],
       "metadata": {
@@ -322,7 +528,7 @@
         "id": "0xtqdBye2uDw",
         "outputId": "b578ae9a-8bd4-4e5f-e23e-45bf90312094"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,38 +551,64 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- CELLA 4: SUBMISSION FINALE ---\n",
+        " # --- CELLA 4: SUBMISSION FINALE ---\n",
+        "\n",
         "if os.path.exists(\"x_test.csv\"):\n",
+        "\n",
         "    print(\"\\nGenerazione file submission...\")\n",
+        "\n",
         "    df_test = pd.read_csv(\"x_test.csv\", sep=';')\n",
         "\n",
+        "\n",
         "    # 1. Preprocessing\n",
+        "\n",
         "    X_test = process_dataframe(df_test)\n",
         "\n",
+        "\n",
         "    # 2. Allineamento Colonne (Fix per feature mancanti/extra)\n",
+        "\n",
         "    trained_features = global_model.feature_names_in_\n",
+        "\n",
         "    # Aggiungi mancanti\n",
+        "\n",
         "    for c in trained_features:\n",
+        "\n",
         "        if c not in X_test.columns: X_test[c] = 0.0\n",
+        "\n",
         "    # Rimuovi extra e riordina\n",
+        "\n",
         "    X_test = X_test[trained_features]\n",
         "\n",
+        "\n",
         "    # 3. Predizione e Arrotondamento\n",
+        "\n",
         "    raw_preds = global_model.predict(X_test)\n",
         "\n",
+        "\n",
         "    # STESSA LOGICA DELLA CELLA 3\n",
+        "\n",
         "    preds_clipped = np.clip(raw_preds, 0, 100)\n",
+        "\n",
         "    preds_int = np.rint(preds_clipped).astype(int)\n",
         "\n",
+        "\n",
         "    submission = pd.DataFrame({\n",
+        "\n",
         "        'id': df_test['id'],\n",
+        "\n",
         "        'label': preds_int\n",
+        "\n",
         "    })\n",
         "\n",
+        "\n",
         "    submission.to_csv('submission_int.csv', index=False)\n",
+        "\n",
         "    print(\"✅ File 'submission_int.csv' pronto! (Valori interi 0-100)\")\n",
+        "\n",
         "    print(submission.head())\n",
+        "\n",
         "else:\n",
+        "\n",
         "    print(\"❌ Manca x_test.csv\")"
       ],
       "metadata": {
@@ -386,7 +618,7 @@
         "id": "J44NCADP2xsT",
         "outputId": "016b6e28-b60e-4267-b626-f82e4325fa5a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
