Creato con Colab

--- a/data_processing5.ipynb
+++ b/data_processing5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmlmafabEcyCqmiwQSBJfv",
+      "authorship_tag": "ABX9TyN9Z/ZXIX87Yl7B2wVDNVNT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "\n",
         "elif not os.path.exists(\"CSV_train.zip\"):\n",
         "\n",
-        "    print(\"⚠️ ATTENZIONE: Carica il file 'CSV_train.zip' e 'x_test.csv' su Colab!\")\n",
+        "    print(\" ATTENZIONE: Carica il file 'CSV_train.zip' e 'x_test.csv' su Colab!\")\n",
         "\n"
       ]
     },
@@ -501,19 +501,6 @@
         "\n",
         "\n",
         "\n",
-        "    if mae < 11.5:\n",
-        "\n",
-        "        print(\"\\n🚀 OTTIMO! Stiamo scendendo verso il target.\")\n",
-        "\n",
-        "    elif mae < 12.5:\n",
-        "\n",
-        "        print(\"\\n✅ Miglioramento stabile.\")\n",
-        "\n",
-        "    else:\n",
-        "\n",
-        "        print(\"\\n⚠️ Stabile.\")\n",
-        "\n",
-        "\n",
         "    return dummy_model\n",
         "\n",
         "\n",
@@ -603,13 +590,13 @@
         "\n",
         "    submission.to_csv('submission_int.csv', index=False)\n",
         "\n",
-        "    print(\"✅ File 'submission_int.csv' pronto! (Valori interi 0-100)\")\n",
+        "    print(\" File 'submission_int.csv' pronto! (Valori interi 0-100)\")\n",
         "\n",
         "    print(submission.head())\n",
         "\n",
         "else:\n",
         "\n",
-        "    print(\"❌ Manca x_test.csv\")"
+        "    print(\" Manca x_test.csv\")"
       ],
       "metadata": {
         "colab": {
