Creato con Colab

--- a/data_processing5.ipynb
+++ b/data_processing5.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "uGiuwQk02MUs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70e8a9b6-700b-4ea7-cc60-82be02c43b70"
+        "outputId": "0b1d2924-f611-4c78-8a03-bd6570ba2700"
       },
       "outputs": [
         {
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0IktUx0d2n3l",
-        "outputId": "730cae86-a8bb-48d5-d011-f0b9305cf8d4"
+        "outputId": "0b0379d9-cfd7-4f9a-ad76-d5346db434dc"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,9 +513,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0xtqdBye2uDw",
-        "outputId": "b578ae9a-8bd4-4e5f-e23e-45bf90312094"
+        "outputId": "4a3a577b-75e1-4e92-87c4-fe40f100aa8f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,9 +528,7 @@
             "\n",
             "--- VALUTAZIONE GLOBALE ---\n",
             "Campioni testati: 204\n",
-            "Errore Medio Assoluto (MAE) REALE: 11.4118\n",
-            "\n",
-            "🚀 OTTIMO! Stiamo scendendo verso il target.\n"
+            "Errore Medio Assoluto (MAE) REALE: 10.9069\n"
           ]
         }
       ]
@@ -603,9 +601,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J44NCADP2xsT",
-        "outputId": "016b6e28-b60e-4267-b626-f82e4325fa5a"
+        "outputId": "e364a8d9-1f37-4324-f051-19df660e8c24"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,13 +611,13 @@
           "text": [
             "\n",
             "Generazione file submission...\n",
-            "✅ File 'submission_int.csv' pronto! (Valori interi 0-100)\n",
+            "File 'submission_int.csv' pronto! (Valori interi 0-100)\n",
             "   id  label\n",
-            "0   0     68\n",
-            "1   1     69\n",
-            "2   2     70\n",
-            "3   3     69\n",
-            "4   4     75\n"
+            "0   0     67\n",
+            "1   1     72\n",
+            "2   2     71\n",
+            "3   3     70\n",
+            "4   4     74\n"
           ]
         }
       ]
